--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
+  shared_preferences: ^2.1.0
+  android_alarm_manager: ^2.0.2
+  flutter_local_notifications: ^14.0.0+1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
